--- a/PizzaParty/app/src/main/res/values/strings.xml
+++ b/PizzaParty/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
+<!--This file contains string values used throughout the app's UI and functionality.. -->
 <resources>
     <string name="app_name">Pizza Party</string>
     <string name="number_of_people">Number of people?</string>
