Final with added features-5
Assignment 2
Added 5 features
different theme preview in the editor

--- a/PizzaParty/app/src/main/res/values/strings.xml
+++ b/PizzaParty/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<!--This file contains string values used throughout the app's UI and functionality.. -->
+<!--This file contains string values used throughout the UI and functionality of the pizza party app.. -->
 <resources>
     <string name="app_name">Pizza Party</string>
     <string name="number_of_people">Number of people?</string>
